[package]
name = "rslide"
version = "0.1.0"
edition = "2021"
description = "A web service that allows you to move through multiple html pages in the browser like a slide, even without focusing on the app console or the browser."
readme = "README.md"
repository = "https://github.com/Jason5Lee/rslide"
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = [ "winuser" ] }
crossbeam = "0.8"
dotenv = "0.15"
actix-web = "3.3"
serde = "1.0"
envy = "0.4"
actix-web-actors = "3"
actix = "0.10"
actix-files = "0.5"
humantime = "2.1"
